Project

General

Profile

Actions

Bug #20688

closed

radosgw-admin: bucket rm with --bypass-gc and without --purge-data doesn't throw error message

Added by Abhishek Varshney almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When radosgw-admin bucket rm is invoked with --bypass-gc and without --purge-data flag, bucket deletion is not allowed. But this does not throw the right error message to the user.

Steps to reproduce

  1. Create a bucket and upload some objects to it.
  2. Try to delete the bucket with --bypass-gc flag. Deletion fails without an error message, which is misleading.
    # bin/radosgw-admin bucket rm --bucket=test --bypass-gc
    2017-07-19 12:03:59.764220 7f31b4fe8a00 -1 WARNING: all dangerous and experimental features are enabled.
    2017-07-19 12:03:59.764658 7f31b4fe8a00 -1 WARNING: all dangerous and experimental features are enabled.
    2017-07-19 12:03:59.768206 7f31b4fe8a00 -1 WARNING: all dangerous and experimental features are enabled.
    
  3. Try getting stats for the bucket.
     
    # bin/radosgw-admin bucket stats --bucket=test > /dev/null 2>&1
    # echo $?
    0
    
  4. Now delete bucket with additional --purge-data flag
    # bin/radosgw-admin bucket rm --bucket=test --bypass-gc --purge-data
    2017-07-19 12:16:05.165853 7f6639b8ca00 -1 WARNING: all dangerous and experimental features are enabled.
    2017-07-19 12:16:05.166295 7f6639b8ca00 -1 WARNING: all dangerous and experimental features are enabled.
    2017-07-19 12:16:05.169515 7f6639b8ca00 -1 WARNING: all dangerous and experimental features are enabled.
    
  5. Now bucket stats fails.
    # bin/radosgw-admin bucket stats --bucket=test > /dev/null 2>&1
    # echo $?
    2
    

    The bucket is now actually deleted.

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20709: jewel: radosgw-admin: bucket rm with --bypass-gc and without --purge-data doesn't throw error messageResolvedNathan CutlerActions
Copied to rgw - Backport #20710: kraken: radosgw-admin: bucket rm with --bypass-gc and without --purge-data doesn't throw error messageRejectedActions
Actions #1

Updated by Abhishek Varshney almost 7 years ago

Actions #2

Updated by Casey Bodley almost 7 years ago

  • Status changed from New to 7
  • Backport set to jewel kraken
Actions #3

Updated by Casey Bodley almost 7 years ago

  • Status changed from 7 to Pending Backport
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20709: jewel: radosgw-admin: bucket rm with --bypass-gc and without --purge-data doesn't throw error message added
Actions #5

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20710: kraken: radosgw-admin: bucket rm with --bypass-gc and without --purge-data doesn't throw error message added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF