rgw: fix error message in removing bucket with --bypass-gc flag

Fixes: http://tracker.ceph.com/issues/20688

Signed-off-by: Abhishek Varshney <abhishek.varshney@flipkart.com>
(cherry picked from commit 596b4bc05f167baca3ae6e3ed9bed5b04d27409e)